--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -19,7 +19,17 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
+  <div class="blog_disease_name">
+    <%= form.label :disease_name %>
+    <%= form.text_field :disease_name %>
+  </div>
+  <div class="blog_age_range">
+    <%= form.label :age_range %>
+    <%= form.select :age_range, Blog.age_ranges.keys.map {|k| [I18n.t("enums.blog.age_range.#{k}"), k]} %>
+  </div>
+
+
   <%= form.submit %>
 <% end %>
 
-<%= link_to 'back', blogs_path %>
+<%= link_to '戻る', blogs_path %>
