--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -3,11 +3,15 @@
 <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
+  <%= form.hidden_field :disease_name %>
+  <%= form.hidden_field :age_range %>
 
   <p><%= form.label :title %>：<%= @blog.title %></p>
   <p><%= form.label :content %>：<%= @blog.content %></p>
+  <p><%= form.label :disease_name %>：<%= @blog.disease_name %></p>
+  <p><%= form.label :age_range %>：<%= @blog.age_range_i18n %></p>
   <%= form.submit %>
 
-  <%= form.submit "back", name: 'back' %>
+  <%= form.submit '戻る', name: 'back' %>
 
 <% end %>
