--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,12 @@
+<% if user_signed_in? %>
+<div>こんにちは！<%= current_user.name %>さん！</div>
+<% end %>
+
 <h3>体験記一覧</h3>
 
-<p><%= notice %></p>
-
+<% if user_signed_in? %>
 <div><%= link_to '新規登録', new_blog_path %></div>
+<% end %>
 
 <table>
   <tr>
@@ -18,9 +22,11 @@
     <td><%= blog.content %></td>
     <td><%= blog.disease_name %></td>
     <td><%= blog.age_range_i18n %></td>
-    <td><%= link_to '確認', blog_path(blog.id) %></td>
-    <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
-    <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
+    <% if user_signed_in? %>
+      <td><%= link_to '確認', blog_path(blog.id) %></td>
+      <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
+      <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
