--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,6 +6,7 @@
 
 <% if user_signed_in? %>
 <div><%= link_to '新規登録', new_blog_path %></div>
+<div><%= link_to '猫の登録', new_cat_path %></div> <%# 一旦入口設置　%>
 <% end %>
 
 <table>
