set breeds table and association

--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -23,6 +23,10 @@
     <%= form.label :birthday %>
     <%= form.date_field :birthday %>
   </div>
+    <div class="cat_breed_name">
+    <%= form.label :breed_name %>
+    <%= form.select :breed_id, Breed.all.map{|b|[b.name, b.id]} %>
+  </div>
 
   <%= form.submit %>
 <% end %>
