--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -15,6 +15,7 @@
     <th>内容</th>
     <th>病名</th>
     <th>年齢層</th>
+    <th>投稿者</th>
   </tr>
 
 <% @blogs.each do |blog| %>
@@ -23,6 +24,7 @@
     <td><%= blog.content %></td>
     <td><%= blog.disease_name %></td>
     <td><%= blog.age_range_i18n %></td>
+    <td><%= blog.user.name %></td>
     <% if user_signed_in? %>
       <td><%= link_to '確認', blog_path(blog.id) %></td>
       <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
