--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @cat, local: true ,url: choose_new_or_edit ) do |form| %>
+<%= form_with(model: @cat, local: true ,url: choose_new_or_edit_about_cat ) do |form| %>
   <% if @cat.errors.any? %>
     <div id="error_explanation">
       <h2><%= @cat.errors.count %>件のエラーがあります。</h2>
