--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -25,8 +25,8 @@
     <td><%= blog.disease_name %></td>
     <td><%= blog.age_range_i18n %></td>
     <td><%= blog.user.name %></td>
-    <% if user_signed_in? %>
-      <td><%= link_to '確認', blog_path(blog.id) %></td>
+    <td><%= link_to '確認', blog_path(blog.id) %></td>
+    <% if blog.user == current_user %>
       <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
       <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
     <% end %>
