set association cat-blogs

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+  <div class="blog_cat_name">
+    <%= form.label :cat_name %>
+    <%# = form.collection_check_boxes :cat_id, current_user.cats, :id, :name, include_hidden: false %>
+    <%= form.select :cat_id, current_user.cats.all.map{|cat|[cat.name, cat.id]} %>
+  </div>
   <div class="blog_title">
     <%= form.label :title %>
     <%= form.text_field :title %>
