--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,10 @@
 
 <h3>ユーザー名</h3>
 <%= @user.name %>
-<h3>メールアドレス</h3>
-<%= @user.email %>
 <h3>プロフィール</h3>
 <%= @user.introduction %>
+<h3>メールアドレス</h3>
+<%= @user.email %>
 
   <div class="user-edit">
     <% if @user == current_user %>
@@ -13,3 +13,47 @@
         <%= link_to "パスワード変更", edit_password_path, class: "user-edit-btn" %>
     <% end %>
   </div>
+
+<table>
+  <tr>
+    <th>名前</th>
+    <th>猫種</th>
+  </tr>
+
+<% @cats.each do |cat| %>
+  <tr>
+    <td><%= cat.name %></td>
+    <td><%= cat.breed.name %></td>
+    <td><%= link_to '確認', cat_path(cat.id) %></td>
+    <% if cat.user == current_user %>
+      <td><%= link_to '編集', edit_cat_path(cat.id) %></td>
+      <td><%= link_to '削除', cat_path(cat.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
+    <% end %>
+  </tr>
+<% end %>
+</table>
+
+<table>
+  <tr>
+    <th>タイトル</th>
+    <th>内容</th>
+    <th>病名</th>
+    <th>年齢層</th>
+    <th>投稿者</th>
+  </tr>
+
+<% @blogs.each do |blog| %>
+  <tr>
+    <td><%= blog.title %></td>
+    <td><%= blog.content %></td>
+    <td><%= blog.disease_name %></td>
+    <td><%= blog.age_range_i18n %></td>
+    <td><%= blog.user.name %></td>
+    <td><%= link_to '確認', blog_path(blog.id) %></td>
+    <% if blog.user == current_user %>
+      <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
+      <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
+    <% end %>
+  </tr>
+<% end %>
+</table>
