move the create buttons to mypage

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -6,4 +6,4 @@
 <p>病名：<%= @blog.disease_name %></p>
 <p>年齢層：<%= @blog.age_range_i18n %></p>
 
-<%= link_to '戻る', blogs_path %>
+<%= link_to '戻る', :back %>
