--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -10,4 +10,29 @@
   <td><%= link_to '削除', cat_path(@cat.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
 <% end %>
 
-<%= link_to '戻る', blogs_path %>
+<table>
+  <tr>
+    <th>タイトル</th>
+    <th>内容</th>
+    <th>病名</th>
+    <th>年齢層</th>
+    <th>投稿者</th>
+  </tr>
+
+<% @blogs.each do |blog| %>
+  <tr>
+    <td><%= blog.title %></td>
+    <td><%= blog.content %></td>
+    <td><%= blog.disease_name %></td>
+    <td><%= blog.age_range_i18n %></td>
+    <td><%= blog.user.name %></td>
+    <td><%= link_to '確認', blog_path(blog.id) %></td>
+    <% if blog.user == current_user %>
+      <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
+      <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
+    <% end %>
+  </tr>
+<% end %>
+</table>
+
+<%= link_to '戻る', :back %>
