--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
     <% if @user == current_user %>
         <%= link_to "アカウント情報編集", edit_user_registration_path, class: "user-edit-btn" %>
         <%= link_to "パスワード変更", edit_password_path, class: "user-edit-btn" %>
+        <%= link_to '猫の登録', new_cat_path %>
     <% end %>
   </div>
 
@@ -32,6 +33,10 @@
   </tr>
 <% end %>
 </table>
+
+<% if user_signed_in? %>
+<div><%= link_to '体験記 新規登録', new_blog_path %></div>
+<% end %>
 
 <table>
   <tr>
