add sorting and created date, close #15

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,6 +45,7 @@
     <th>病名</th>
     <th>年齢層</th>
     <th>投稿者</th>
+    <th>投稿日</th>
   </tr>
 
 <% @blogs.each do |blog| %>
@@ -54,6 +55,7 @@
     <td><%= blog.disease_name %></td>
     <td><%= blog.age_range_i18n %></td>
     <td><%= blog.user.name %></td>
+    <td><%= blog.created_at.strftime("%Y/%m/%d") %></td>
     <td><%= link_to '確認', blog_path(blog.id) %></td>
     <% if blog.user == current_user %>
       <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
