--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,5 +5,10 @@
 <p>本文：<%= @blog.content %></p>
 <p>病名：<%= @blog.disease_name %></p>
 <p>年齢層：<%= @blog.age_range_i18n %></p>
+<p>症状：
+  <% @blog.symptoms.each do |symptom| %>
+    #<%= symptom.detail %>
+  <% end %>
+</p>
 
-<%= link_to '戻る', :back %>
+<%= link_to '戻る', blogs_path %>
