--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,14 @@
 <h3><%= @user.name %>さんのページ</h3>
 
-<h3>ユーザー名</h3>
-<%= @user.name %>
+<div>
+  <% if @user.image.present? %>
+    <%= image_tag @user.image.url, class: "main_icon" %>
+  <% else %>
+    <%= image_tag asset_path('user_icon.jpg'), class: "main_icon" %>
+  <% end %>
+</div>
+<h3>ユーザー名：<%= @user.name %></h3>
+
 <h3>プロフィール</h3>
 <%= @user.introduction %>
 <h3>メールアドレス</h3>
