--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -20,6 +20,22 @@
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
+
+
+  <div>
+    <%= form.label :images, "画像（複数選択が可能です）" %>
+    <%= form.file_field :images, direct_upload: true, multiple: true %>
+  </div>
+  <% if @blog.images.attached? %>
+    <p>現在登録されている画像（削除するものはチェックしてください）</p>
+    <% @blog.images.each do |image| %>
+      <%= form.check_box :image_ids, {multiple: true}, image.id, false %>
+      <label for="blog_image_ids_<%= image.id %>" >
+        <%= image_tag image.variant(resize_to_limit: [200, 200]) %>
+      </label>
+    <% end %>
+  <% end %>
+
   <div class="blog_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
