--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,6 +2,11 @@
 <p>猫名：<%= @blog.cat.name if @blog.cat.present? %></p>
 
 <p>タイトル：<%= @blog.title %></p>
+<p>
+  <% @blog.images.each do |image| %>
+    <%= image_tag(image.variant(resize_to_limit: [200, 200])) %>
+  <% end %>
+</p>
 <p>本文：<%= @blog.content %></p>
 <p>病名：<%= @blog.disease_name %></p>
 <p>年齢層：<%= @blog.age_range_i18n %></p>
