--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -15,7 +15,7 @@
 
   <p><%= form.label :cat_name %>：<%= @blog.cat.name if @blog.cat.present? %></p>
   <p><%= form.label :title %>：<%= @blog.title %></p>
-  <p><%= form.label :images %>：
+  <p><%= form.label :image %>：
     <% @blog.images.each do |image| %>
       <%= image_tag(image.variant(resize_to_limit: [200, 200])) %>
     <% end %>
