--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,4 +1,4 @@
-<h3>以下の内容で、投稿する？</h3>
+<h3>以下の内容で、投稿しますか？</h3>
 
 <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
   <%= form.hidden_field :cat_id %>
