add user’s blog list

--- a/app/views/users/blog_list.html.erb
+++ b/app/views/users/blog_list.html.erb
@@ -1,11 +1,4 @@
-<h3>体験記一覧</h3>
-
-<%= search_form_for @q, url: blogs_path do |f| %>
-   <%= f.search_field :title_or_content_or_disease_name_or_symptoms_detail_cont, placeholder: '検索ワード' %>
-   <%= f.select :age_range_eq, Blog.age_ranges_i18n.invert.map {|key, value| [key, Blog.age_ranges[value]]}, include_blank: "年齢で絞り込み" %>
-   <%= f.select :cat_breed_id_eq, options_from_collection_for_select(Breed.all, :id, :name), include_blank: "猫種で絞り込み" %>
-   <%= f.submit '検索' %>
-<% end %>
+<h3><%= @user.name %>さんの体験記一覧</h3>
 
 <table>
   <tr>
@@ -23,7 +16,7 @@
     <td><%= blog.content %></td>
     <td><%= blog.disease_name %></td>
     <td><%= blog.age_range_i18n %></td>
-    <td><%= link_to "#{blog.user.name}", user_path(blog.user) %></td>
+    <td><%= blog.user.name %></td>
     <td><%= blog.created_at.strftime("%Y/%m/%d") %></td>
     <td><%= link_to '確認', blog_path(blog.id) %></td>
     <% if blog.user == current_user %>
@@ -33,3 +26,7 @@
   </tr>
 <% end %>
 </table>
+
+<br>
+
+<%= link_to '戻る', 'javascript:history.back()' %>
