--- a/app/views/searches/select_symptom.html.erb
+++ b/app/views/searches/select_symptom.html.erb
@@ -7,11 +7,11 @@
     カテゴリーを選択すると詳細が表示されますので、該当する項目を選んで「次へ」を押してください。<br>
     （複数のカテゴリー・詳細を選択していただけます）</p>
 
-    <% 13.times do |n| %>
+    <%  @symptoms_categories.each do |category| %>
         <div class="accordion">
-          <p class="menu js-menu"><%= form.label I18n.t(@symptoms_category[n]) %></p>
+          <p class="menu js-menu"><%= form.label I18n.t(category) %></p>
           <div class="contents">
-            <% @symptoms.where(category: n + 1 ).each do |symptom| %>
+            <% @symptoms.where(category: category ).each do |symptom| %>
               <div class="btn_check"><%= form.check_box :symptom_details, { multiple: true, disabled: symptom[:disabled], include_hidden: false }, symptom[:detail] %>
                 <%= form.label :symptom_details, symptom.detail, value: symptom[:detail] %>
               </div>
