--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,6 +24,5 @@
 <strong>サービスの位置付け</strong><br>
 入力された情報に基づき、関連する病気や病気の体験記を提供するサービスです。<br>
 本サービスは、医療機器ではないため情報提供のみを行い、医学的アドバイス、診断、治療、予防などを目的としておりません。<br>
-獣医師や他の医療専門家に代わるものではないため、提供する情報に基づいて医学的判断を下したり、何らかの行動（薬の服用など）を行ったり中止したりしないでください。<br>
-また、生命を脅かすような状態や緊急の状態では使用しないでください。<br>
+獣医師や他の医療専門家に代わるものではないため、提供する情報に基づいて医学的判断を下したり、何らかの行動（薬の服用など）を行ったり中止したりしないでください。
 </p>
