designed the header, body, home and login page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,20 @@
  *= require_tree .
  *= require_self
  */
+@import "font-awesome";
+
+body {
+  margin: 0;
+  background-image: url("pink_paws.png");
+}
+
+.column {
+  background-color: #fff;
+}
+
+.alert {
+  color: #008b8b;
+}
 
 .main_icon {
   width: 100px;
