--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,28 +1,40 @@
 <% if user_signed_in? %>
-<div>こんにちは！<%= current_user.name %>さん！</div>
+<div class="mb-4">こんにちは！<%= current_user.name %>さん！</div>
 <% end %>
 
-<h3>メインビジュアル</h3>
+<div class="main_visual">
+  <%= image_tag asset_path('cat_main.jpg')%>
+  <p>
+    このアプリでは、猫の症状に関連する病気の情報等を検索できます。<br>
+    また、猫の症状に関連する体験記を閲覧することもできます。<br>
+    あなたも体験記を投稿することで、別のユーザー・猫さんを救うきっかけになれるかもしれません。ぜひご投稿ください！
+  </p>
+</div>
 
-<h3><%= link_to "症状から調べる" %></h3>
+<div class="center">
+<%= link_to select_symptom_path, class: "button is-rounded is-link is-light is-medium is-focused" do %>
+  <span class="icon"><i class="fas fa-magnifying-glass"></i></span>
+  <span>症状から調べる</span>
+<% end %>
+</div>
 
-<p>
-このサイトでは、猫の症状に関連する病気の情報等を検索できます。<br>
-また、猫の症状に関連する体験記を閲覧することもできます。<br>
-さらに、あなたも体験記を投稿することで、別のユーザー・猫を救うきっかけになれるかもしれません。<br>
-ぜひご投稿ください！
-</p>
-<p>
-<strong>サービスの目的</strong><br>
-猫は、本能的に痛みや不調を隠します。そのため、病気を重篤化させないためには、日頃のちょっとした変化をよく観察する必要があります。<br>
-そして、変化に気がついた際、色々と不安に思うことがあると思います。<br>
-そんな不安に寄り添いたい。そんな思いで開発しました。<br>
-また、体験記では、病気の経過、試した治療法など、詳細な情報を得ることができ、より具体的な不安を解消するお手伝いができます。<br>
-このサービスは、「病気の早期発見の大切さ」「情報共有によって生まれる好循環」を軸に開発されています。
-</p>
-<p>
-<strong>サービスの位置付け</strong><br>
-入力された情報に基づき、関連する病気や病気の体験記を提供するサービスです。<br>
-本サービスは、医療機器ではないため情報提供のみを行い、医学的アドバイス、診断、治療、予防などを目的としておりません。<br>
-獣医師や他の医療専門家に代わるものではないため、提供する情報に基づいて医学的判断を下したり、何らかの行動（薬の服用など）を行ったり中止したりしないでください。
-</p>
+
+<div class="guide-box">
+  <div class="box-title">サービスの目的</div>
+  <p>
+    猫は、本能的に痛みや不調を隠します。そのため、病気を重篤化させないためには、日頃のちょっとした変化をよく観察する必要があります。<br>
+    ただ、変化に気がついた時には色々と不安に思うことがあると思います。<br>
+    そんな不安に寄り添いたい。そんな思いでこのサービスを開発しました。<br>
+    また、ユーザーによって投稿された体験記からは、病気の経過、試した治療法など、詳細な情報を得ることができ、より具体的な不安を解消するお手伝いができると思います。<br>
+    このサービスは、「病気の早期発見の大切さ」「情報共有によって生まれる好循環」を軸に開発されています。
+  </p>
+</div>
+
+<div class="guide-box2">
+  <div class="box-title">サービスの位置付け</div>
+  <p>
+    入力された情報に基づき、関連する病気や体験記を提供するサービスです。<br>
+    本サービスは、医療機器ではないため情報提供のみを行い、医学的アドバイス、診断、治療、予防などを目的としておりません。<br>
+    獣医師や他の医療専門家に代わるものではないため、提供する情報に基づいて医学的判断を下したり、何らかの行動（薬の服用など）を行ったり中止したりしないでください。
+  </p>
+</div>
