--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit t('.sign_up'), class: "button is-primary mt-2" %>
+      <%= f.submit t('.sign_up'), class: "button is-info mt-2" %>
     </div>
   <% end %>
 
