--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,39 +1,68 @@
 <h3>体験記一覧</h3>
 
-<%= search_form_for @q, url: blogs_path do |f| %>
-   <%= f.search_field :title_or_content_or_disease_name_or_symptoms_detail_cont, placeholder: '検索ワード' %>
-   <%= f.select :age_range_eq, Blog.age_ranges_i18n.invert.map {|key, value| [key, Blog.age_ranges[value]]}, include_blank: "年齢で絞り込み" %>
-   <%= f.select :cat_breed_id_eq, options_from_collection_for_select(Breed.all, :id, :name), include_blank: "猫種で絞り込み" %>
-   <%= f.submit '検索' %>
-<% end %>
+<div class="column is-10 is-offset-1 my-4">
+  <p>
+    お好きなワード・年齢層・猫種で絞り込み検索ができます。
+  </p>
+  <div class="field">
+    <%= search_form_for @q, url: blogs_path do |f| %>
+      <p class="control">
+        <%= f.search_field :title_or_content_or_disease_name_or_symptoms_detail_cont, class: "input is-info", placeholder: '検索ワード' %>
+      </p>
+      <div class="is-grouped">
+        <p class="control">
+          <p class="select">
+            <%= f.select :age_range_eq, Blog.age_ranges_i18n.invert.map {|key, value| [key, Blog.age_ranges[value]]}, include_blank: "年齢で絞り込み" %>
+          </p>
+          <p class="select">
+            <%= f.select :cat_breed_id_eq, options_from_collection_for_select(Breed.all, :id, :name), include_blank: "猫種で絞り込み" %>
+          </p>
+          <%= f.submit '　検 索　', class: "button is-info" %>
+        </p>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 <% if @pagy.vars[:count] > 0 %>
-  <table>
-    <tr>
-      <th>タイトル</th>
-      <th>内容</th>
-      <th>病名</th>
-      <th>年齢層</th>
-      <th>投稿者</th>
-      <th>投稿日</th>
-    </tr>
-
   <% @blogs.each do |blog| %>
-    <tr>
-      <td><%= blog.title %></td>
-      <td><%= blog.content %></td>
-      <td><%= blog.disease_name %></td>
-      <td><%= blog.age_range_i18n %></td>
-      <td><%= link_to "#{blog.user.name}", user_path(blog.user) %></td>
-      <td><%= blog.created_at.strftime("%Y/%m/%d") %></td>
-      <td><%= link_to '確認', blog_path(blog.id) %></td>
-      <% if blog.user == current_user %>
-        <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
-        <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
-      <% end %>
-    </tr>
+    <div class="box">
+      <article class="media px-5">
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <%= link_to user_path(blog.user) do %>
+                <% if blog.user.image.present? %>
+                  <%= image_tag blog.user.image.url, class: "index_icon" %>
+                <% else %>
+                  <%= image_tag asset_path('user_icon.jpg'), class: "index_icon" %>
+                <% end %>
+                <small><%= blog.user.name %></small>
+              <% end %>
+              <small class="ml-4"><i class="fa-regular fa-calendar mr-1"></i><%= blog.created_at.strftime("%Y/%m/%d") %></small>
+            </p>
+            <h4 class="mt-2"><%= link_to blog.title, blog_path(blog.id) %></h4>
+            <p class="txt-limit">
+              <%= blog.content %>
+            </p>
+            <p>
+              <% if blog.disease_name.present? %>
+                <small>病名： <%= blog.disease_name %></small>
+              <% end %>
+              <% if blog.symptoms.present? %>
+                <% blog.symptoms.each do |symptom| %>
+                  <div class="button is-small is-rounded is-static m-1"><%= symptom.detail %></div>
+                <% end %>
+              <% end %>
+            </p>
+          </div>
+        </div>
+        <div class="media-right image">
+          <%=  link_to image_tag(blog.images.first.variant(resize_to_limit: [128, 128])), blog_path(blog.id) if blog.images.attached? %>
+        </div>
+      </article>
+    </div>
   <% end %>
-  </table>
 <% else %>
   <p>検索結果は 0 件です。</p>
   <p>恐れ入りますが、検索条件を変更してください。</p>
