--- a/app/views/searches/search_results.html.erb
+++ b/app/views/searches/search_results.html.erb
@@ -4,27 +4,43 @@
   </div>
 
 <h3>検索した症状に関連する体験記一覧</h3>
-<table>
-  <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-    <th>病名</th>
-    <th>年齢層</th>
-    <th>投稿者</th>
-    <th>投稿日</th>
-  </tr>
-
   <% @blogs.each do |blog| %>
-    <tr>
-      <td><%= blog.title %></td>
-      <td><%= blog.content %></td>
-      <td><%= blog.disease_name %></td>
-      <td><%= blog.age_range_i18n %></td>
-      <td><%= blog.user.name %></td>
-      <td><%= blog.created_at.strftime("%Y/%m/%d") %></td>
-      <td><%= link_to '確認', blog_path(blog.id) %></td>
-    </tr>
+    <div class="box">
+      <article class="media px-5">
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <%= link_to user_path(blog.user) do %>
+                <% if blog.user.image.present? %>
+                  <%= image_tag blog.user.image.url, class: "index_icon" %>
+                <% else %>
+                  <%= image_tag asset_path('user_icon.jpg'), class: "index_icon" %>
+                <% end %>
+                <small><%= blog.user.name %></small>
+              <% end %>
+              <small class="ml-4"><i class="fa-regular fa-calendar mr-1"></i><%= blog.created_at.strftime("%Y/%m/%d") %></small>
+            </p>
+            <h4 class="mt-2"><%= link_to blog.title, blog_path(blog.id) %></h4>
+            <p class="txt-limit">
+              <%= blog.content %>
+            </p>
+            <p>
+              <% if blog.disease_name.present? %>
+                <small>病名： <%= blog.disease_name %></small>
+              <% end %>
+              <% if blog.symptoms.present? %>
+                <% blog.symptoms.each do |symptom| %>
+                  <div class="button is-small is-rounded is-static m-1"><%= symptom.detail %></div>
+                <% end %>
+              <% end %>
+            </p>
+          </div>
+        </div>
+        <div class="media-right image">
+          <%=  link_to image_tag(blog.images.first.variant(resize_to_limit: [128, 128])), blog_path(blog.id) if blog.images.attached? %>
+        </div>
+      </article>
+    </div>
   <% end %>
-</table>
 
-<%= link_to '戻る', 'javascript:history.back()' %>
+<%= link_to '戻る', 'javascript:history.back()', class: "button is-light is-rounded m-4" %>
