--- a/app/views/searches/select_symptom.html.erb
+++ b/app/views/searches/select_symptom.html.erb
@@ -21,7 +21,7 @@
     <% end %>
   </div>
   
-  <%= form.submit '次へ', name: nil, class: "button is-fullwidth is-light-green is-rounded mt-5" %>
+  <%= form.submit '次へ', name: nil, class: "button is-fullwidth is-aqua-green is-medium is-rounded mt-5" %>
 <% end %>
 
 <%= link_to '戻る', 'javascript:history.back()', class: "button is-fullwidth is-light is-rounded mt-5" %>
