--- a/app/views/users/blog_list.html.erb
+++ b/app/views/users/blog_list.html.erb
@@ -1,36 +1,48 @@
-<h3><%= @user.name %>さんの体験記一覧</h3>
+<h3 class="mb-5"><%= @user.name %>さんの体験記一覧</h3>
 
 <% if @pagy.vars[:count] > 0 %>
-  <table>
-    <tr>
-      <th>タイトル</th>
-      <th>内容</th>
-      <th>病名</th>
-      <th>年齢層</th>
-      <th>投稿者</th>
-      <th>投稿日</th>
-    </tr>
-
   <% @blogs.each do |blog| %>
-    <tr>
-      <td><%= blog.title %></td>
-      <td><%= blog.content %></td>
-      <td><%= blog.disease_name %></td>
-      <td><%= blog.age_range_i18n %></td>
-      <td><%= blog.user.name %></td>
-      <td><%= blog.created_at.strftime("%Y/%m/%d") %></td>
-      <td><%= link_to '確認', blog_path(blog.id) %></td>
-      <% if blog.user == current_user %>
-        <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
-        <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '削除してよろしいですか?' } %></td>
-      <% end %>
-    </tr>
+    <div class="box">
+      <article class="media px-5">
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <%= link_to user_path(blog.user) do %>
+                <% if blog.user.image.present? %>
+                  <%= image_tag blog.user.image.url, class: "index_icon" %>
+                <% else %>
+                  <%= image_tag asset_path('user_icon.jpg'), class: "index_icon" %>
+                <% end %>
+                <small><%= blog.user.name %></small>
+              <% end %>
+              <small class="ml-4"><i class="fa-regular fa-calendar mr-1"></i><%= blog.created_at.strftime("%Y/%m/%d") %></small>
+            </p>
+            <h4 class="mt-2"><%= link_to blog.title, blog_path(blog.id) %></h4>
+            <p class="txt-limit">
+              <%= blog.content %>
+            </p>
+            <p>
+              <% if blog.disease_name.present? %>
+                <small>病名： <%= blog.disease_name %></small>
+              <% end %>
+              <% if blog.symptoms.present? %>
+                <% blog.symptoms.each do |symptom| %>
+                  <div class="button is-small is-rounded is-static m-1"><%= symptom.detail %></div>
+                <% end %>
+              <% end %>
+            </p>
+          </div>
+        </div>
+        <div class="media-right image">
+          <%=  link_to image_tag(blog.images.first.variant(resize_to_limit: [128, 128])), blog_path(blog.id) if blog.images.attached? %>
+        </div>
+      </article>
+    </div>
   <% end %>
-  </table>
 <% else %>
   <p>投稿されている体験記はありません。</p>
 <% end %>
 
 <%== pagy_bulma_nav(@pagy) %>
 
-<%= link_to '戻る', 'javascript:history.back()' %>
+<%= link_to '戻る', 'javascript:history.back()', class: "button is-light is-rounded m-4" %>
